@@ -23,12 +23,11 @@ jobs:
       id: version
       run: |
         python3 CI/build_version.py
-        mkdir -p version-info; cd version-info
-        cmake ..
-        cd ..
+        mkdir -p version-info && cd version-info && cmake .. && cd ..
         . ./version-info/version
+        rm -rf version-info
         SYNERGY_VERSION="$SYNERGY_VERSION_MAJOR.$SYNERGY_VERSION_MINOR.$SYNERGY_VERSION_PATCH"
-        SYNERGY_REVISION=`git rev-parse --short=8 HEAD`
+        SYNERGY_REVISION=$(git rev-parse --short=8 HEAD)
         SYNERGY_DEB_VERSION="${SYNERGY_VERSION}.${SYNERGY_VERSION_STAGE}.${SYNERGY_REVISION}"
         echo "::set-output name=SYNERGY_VERSION_MAJOR::${SYNERGY_VERSION_MAJOR}"
         echo "::set-output name=SYNERGY_VERSION_MINOR::${SYNERGY_VERSION_MINOR}"
@@ -38,7 +37,7 @@ jobs:
         echo "::set-output name=SYNERGY_VERSION::${SYNERGY_VERSION}"
         echo "::set-output name=SYNERGY_REVISION::${SYNERGY_REVISION}"
         echo "::set-output name=SYNERGY_DEB_VERSION::${SYNERGY_DEB_VERSION}"
-        if [$SYNERGY_ENTERPRISE == '1']
+        if [ "$SYNERGY_ENTERPRISE" == '1' ]
         then
             echo "::set-output name=SYNERGY_REMOTE_FOLDER::synergy-core/v1-core-enterprise/${SYNERGY_VERSION}/${SYNERGY_VERSION_STAGE}/b${SYNERGY_VERSION_BUILD}-${SYNERGY_REVISION}"
             echo "::set-output name=SYNERGY_PACKAGE_NAME::synergy-enterprise"
@@ -46,7 +45,6 @@ jobs:
             echo "::set-output name=SYNERGY_REMOTE_FOLDER::synergy-core/v1-core-standard/${SYNERGY_VERSION}/${SYNERGY_VERSION_STAGE}/b${SYNERGY_VERSION_BUILD}-${SYNERGY_REVISION}"
             echo "::set-output name=SYNERGY_PACKAGE_NAME::synergy"
         fi
-        rm -rf version-info
 
     - name: Build deb
       env:
@@ -54,9 +52,10 @@ jobs:
         SYNERGY_REVISION: ${{ steps.version.outputs.SYNERGY_REVISION }}
         SYNERGY_DEB_VERSION: ${{ steps.version.outputs.SYNERGY_DEB_VERSION }}
         PACKAGE_NAME: ${{ steps.version.outputs.SYNERGY_PACKAGE_NAME }}
+        SYNERGY_VERSION_STAGE: ${{ steps.version.outputs.SYNERGY_VERSION_STAGE }}
       run: |
+        sed -i "s/ synergy/ ${PACKAGE_NAME}/g" ./debian/control
         dch --create --package "${PACKAGE_NAME}" --controlmaint --distribution unstable --newversion $SYNERGY_DEB_VERSION "Initial release"
-        export GPG_TTY=$(tty)
         debuild --preserve-envvar SYNERGY_* --preserve-envvar GIT_COMMIT -us -uc
         mkdir -p package
         cd ..
